# steve_perception

./: .gitmodules  QUICK_START_FOR_COLLEAGUES.md  README.md  readme.md  robot_name.txt
.devcontainer/: DOCKER_IMAGE.md  (+4 more)
src/neo_simulation2/: CMakeLists.txt  README.md  package.xml
src/neo_simulation2/.github/workflows/: main.yml
src/neo_simulation2/components/arm/: elite_arm.urdf.xacro  robotiq_gripper.urdf.xacro  ur_arm.urdf.xacro
src/neo_simulation2/components/cameras/: wrist_d405.urdf.xacro
src/neo_simulation2/components/common_macro/: gazebo_diff_drive_plugin_macro.xacro  gazebo_lidar_macro.xacro  gazebo_object_controller_macro.xacro  mpo_cabinet_macro.xacro
src/neo_simulation2/components/dynamixel/: dynamixel_bracket_fr12_h101.urdf.xacro  dynamixel_motor_xl-430.gazebo.xacro  dynamixel_motor_xl-430.transmission.xacro  dynamixel_motor_xl-430.urdf.xacro  steve_pan_tilt.xacro
src/neo_simulation2/components/pan_tilt/: pan_tilt.ros2_control.xacro  pan_tilt_tower.urdf.xacro
src/neo_simulation2/components/realsense/: l515.urdf.xacro  l515_simplified.urdf.xacro
src/neo_simulation2/configs/mmo_700/: mapping.yaml  mmo_700_controllers.yaml  navigation.yaml  pan_tilt_controllers.yaml
src/neo_simulation2/configs/mp_400/: navigation.yaml
src/neo_simulation2/configs/mp_500/: mapping.yaml  navigation.yaml
src/neo_simulation2/launch/: mapping.launch.py  navigation.launch.py  robot_description.launch.py  simulation.launch.py  simulation_moveit.launch.py
src/neo_simulation2/rviz/: robot_description_rviz.rviz
src/neo_simulation2/worlds/: neo_workshop.world
(+91 files in other folders)
